<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasYmmo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_immo">New Immo</string>
    <string name="title_activity_consultation">Consultation</string>
    <string name="title_activity_add_ref_location">Add Ref Location</string>
    <string name="button_AddImmo">New Immo</string>
    <string name="button_Consultation">Consultation</string>
    <string name="button_AddRefLocation">Add Ref Location</string>
    <string name="button_OK">OK</string>
    <string name="button_addVocalNote">Add vocal note</string>
    <string name="button_addNotes">Add notes</string>
    <string name="button_Photo">Photo</string>
    <string name="button_Call">Call</string>
    <string name="button_Localisation">Localisation</string>
    <string name="button_Delete">Delete</string>
    <string name="button_Export">Export</string>
    <string name="edit_Comp">add supplement</string>
    <string name="edit_Price">Rent/Price </string>
    <string name="edit_Name">File Name </string>
    <string name="edit_Street">Street</string>
    <string name="edit_City">City</string>
    <string name="edit_ZipCode">Zip Code</string>
    <string name="edit_Note">Note</string>
    <string name="edit_Surface">Surface m2</string>
    <string name="edit_NbrOfRooms">Number of rooms</string>
    <string name="edit_State">State</string>
    <string name="edit_Correct">Correct</string>
    <string name="edit_Well">Well</string>
    <string name="edit_Bad">Bad</string>
    <string name="edit_txt"></string>
    <string name="edit_Num">Contact</string>
    <string name="edit_06">06....</string>
    <string name="action_Main">Back</string>
    <string name="action_AddImmo">New Immo</string>
    <string name="action_Consultation">Consultation</string>
    <string name="action_AddRefLocation">Add Ref Location</string>
    <string name="title_activity_photo_intent">PhotoIntentActivity</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">Camera</string>
    <string name="title_activity_audio_record_test">AudioRecordTest</string>
    <string name="info">\nTo start recording press \"Record\" button, to stop recording press \"Stop\" button.</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="title_activity_sound_recorder">SoundRecorder</string>

</resources>
