<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView  
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:scaleType="center"
        android:src="@drawable/background" />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    
    android:background="#AA000000"
    >
  
    <Button
       android:id="@+id/btnIntend"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_margin="3dp"
       android:background="@drawable/btn_black"
       android:text="@string/btnIntend"
       android:textColor="#FFFFFF" />

    <Button
       android:id="@+id/btnIntendS"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_margin="3dp"
       android:background="@drawable/btn_black"
       android:text="@string/btnIntendS"
       android:textColor="#FFFFFF" />
    
    <Button
       android:id="@+id/btnIntendV"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_margin="3dp"
       android:background="@drawable/btn_black"
       android:text="@string/btnIntendV"
       android:textColor="#FFFFFF" />

  <ImageView 
      android:layout_height="100dp" 
      android:layout_width="wrap_content" 
      android:visibility="visible"
      android:id="@+id/imageView" />
  <VideoView 
      android:layout_height="100dp" 
      android:layout_width="wrap_content" 
      android:visibility="invisible"
      android:id="@+id/videoView" />
</LinearLayout>
</FrameLayout>