<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView  
        android:id="@+id/imageView"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:scaleType="center"
        android:src="@drawable/background" />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:background="#AA000000"
    >
  
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
                android:layout_width="125dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"
                android:textSize="15sp" android:text="@string/edit_Name">
    </TextView>
    <EditText android:id="@+id/edit_Name"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="3dp"
        		android:background="@drawable/edit_txt"
        		android:hint="@string/edit_txt" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
                android:layout_width="125dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"
                android:textSize="15sp" android:text="@string/edit_Street">
    </TextView>
    <EditText android:id="@+id/edit_Street"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="3dp"
        		android:background="@drawable/edit_txt"
        		android:hint="@string/edit_txt" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
                android:layout_width="125dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="3dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp" android:text="@string/edit_City">
    </TextView>
    <EditText android:id="@+id/edit_City"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="3dp"
        		android:background="@drawable/edit_txt"
        		android:hint="@string/edit_txt" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
                android:layout_width="125dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_margin="3dp"
                android:textSize="15sp" android:text="@string/edit_ZipCode">
    </TextView>
    <EditText android:id="@+id/edit_ZipCode"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_margin="3dp"
        		android:background="@drawable/edit_txt"
        		android:hint="@string/edit_txt" />
    </LinearLayout>
    
    <LinearLayout
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_margin="3dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp" android:text="@string/edit_Comp">
    </TextView>
    <EditText android:id="@+id/edit_Comp"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:background="@drawable/edit_txt"
        		android:layout_margin="3dp"
        		android:hint="@string/edit_txt" />
    </LinearLayout>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:gravity="center"
       
        android:text="MapView a ajouter"
        android:textSize="20dp"
        android:layout_centerInParent="true"/>
    
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_black"
        android:layout_margin="3dp"
        android:src="@drawable/ic_action_place"
        android:onClick="GenerateLocalisation" />
    
    
</LinearLayout>
</FrameLayout>